--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings":{
+    "pgconn":"Server=cipg01;Port=5432;Database=CP_TR086;User Id=postgres;Password=123456;"
+  }
 }
