Jwt Token Implemnt

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings":{
     "pgconn":"Server=cipg01;Port=5432;Database=CP_TR086;User Id=postgres;Password=123456;"
+  },
+  "Jwt":{
+    "Key":"sdfh3KSDJCibd245ko34itABCDEF456789",
+    "Issuer":"http://localhost:5185/",
+    "Audience":"http://localhost:5295/",
+    "Subject":"JWTServicesAccessToken"
   }
 }
