Implement Refresh Token

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -13,6 +13,8 @@
     "Key":"sdfh3KSDJCibd245ko34itABCDEF456789",
     "Issuer":"http://localhost:5185/",
     "Audience":"http://localhost:5295/",
-    "Subject":"JWTServicesAccessToken"
+    "Subject":"JWTServicesAccessToken",
+    "AccessTokenExpiryMinutes":1,
+    "RefreshTokenExpiryMinutes":15
   }
 }
