JWT Authentication Api Done

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -14,7 +14,7 @@
     "Issuer":"http://localhost:5185/",
     "Audience":"http://localhost:5295/",
     "Subject":"JWTServicesAccessToken",
-    "AccessTokenExpiryMinutes":1,
-    "RefreshTokenExpiryMinutes":15
+    "AccessTokenExpiry":"1",
+    "RefreshTokenExpiry":"1440"
   }
 }
